# OpenGL-Solar-Systems-Simulator-Visual-Studio-Build-Version

./: CMakeLists.txt  README.md
include/glad/: glad.h
resources/: scales.txt
scripts/: buildglm.bat  run.bat
src/: Camera.hpp  DebugLevel.hpp  GLDrawWindow.cpp  IDManager.hpp  OrbitalObjectFactory.hpp  RenderGroup3DManager.hpp  RenderGroupID.hpp  Shape.hpp  ShapeFactory.hpp  ShapeSurface.cpp  ShapeSurface.hpp  SphereObjectFactory.cpp  SphereObjectFactory.hpp  TestCamera.hpp  TestLightings.hpp  TestMorePlanets.hpp  TestOrbitAroundObject.hpp  TestOrbitalObjects.cpp  TestRender2Objects.cpp  TestRenderGroup3D.hpp  TestSkyBoxTracking.hpp  Tests.hpp  Texture.cpp  Texture.hpp  TextureLoader.cpp  glad.c  glmlib.hpp  lib3d.hpp  main.cpp
src/shaders/: object3d.vert
